--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": ">=5.3.2",
-        "ext-mongo": ">=1.2.12,<1.6-dev",
+        "ext-mongo": ">=1.2.12",
         "zendframework/zendframework1": "*"
     },
     "autoload": {
